syntax = "proto3";

option go_package = ".;hello";

package hello;

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
	rpc SayHello2 (stream HelloRequest) returns (HelloReply) {}
	rpc SayHello3 (HelloRequest) returns (stream HelloReply) {}
	rpc SayHello4 (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}